plugins {
    id 'java'
}

group = 'com.learning'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['--enable-preview']
}

tasks.test {
    useJUnitPlatform()
    jvmArgs += '--enable-preview'
}

tasks.register('buildSite', Exec) {
    commandLine 'npm', 'run', 'build'
}
